<resources>
    <string name="app_name">¿Ya tenés turno?</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="permission_rationale_location">Se usará el permiso de ubicación para localizar en el mapa su posición actual</string>
    <string name="editar_horario_laboral">Editar horario laboral</string>
    <string name="enviar_mensajes_a_clientes">Enviar mensajes a clientes</string>
    <string name="no_hay_lugares_que_administrar">No hay lugares que administrar</string>
    <string name="mensaje">Mensaje</string>
    <string name="attach_link">Adjuntar link</string>
    <string name="contact_info">Información de contacto</string>
    <string name="apertura">Apertura</string>
    <string name="cierre">Cierre</string>
    <string name="cerras_al_mediodia">¿Cerrás al mediodía?</string>
    <string name="comienzo_pausa">Comienzo pausa</string>
    <string name="fin_pausa">Fin pausa</string>
    <string name="confirm">Confirmar</string>
    <string name="clients_of_employee">Clientes del empleado</string>
    <string name="empleado_sin_clientes">El empleado no registra ningún cliente</string>
    <string name="premium_invite_with_place">%1$s!\nObtén Premium en %2$s para hacer uso de los siguientes beneficios</string>
    <string name="premium_invite_without_place">%1$s!\nObtén Premium para hacer uso de los siguientes beneficios</string>
    <string name="view_sub_options">Ver ofertas</string>
    <string name="solicitudes_de_trabajo">Solicitudes de trabajo</string>
    <string name="aun_no_hay_nada_por_aqu">Aún no hay nada por aquí</string>
    <string name="nueva_solicitud_de_trabajo">Nueva solicitud de trabajo</string>
    <string name="dom">Dom</string>
    <string name="lun">Lun</string>
    <string name="mar">Mar</string>
    <string name="mie">Mie</string>
    <string name="jue">Jue</string>
    <string name="vie">Vie</string>
    <string name="sab">Sab</string>
    <string name="sin_turnos_este_d_a">Sin turnos este día</string>
    <string name="a_donde_desea_enviar_la_solicitud_de_trabajo">¿A dónde desea enviar la solicitud de trabajo?</string>
    <string name="cancelar_turno">Cancelar turno</string>
    <string name="este_lugar_aun_no_tiene_trabajos">Este lugar aún no tiene trabajos</string>
    <string name="generar_un_trabajo_propio">Generar un trabajo propio</string>
    <string name="cerrado">Cerrado</string>
    <string name="domingo_letter">D</string>
    <string name="lunes_letter">L</string>
    <string name="martes_letter">M</string>
    <string name="miercoles_letter">M</string>
    <string name="jueves_letter">J</string>
    <string name="viernes_letter">V</string>
    <string name="sabado_letter">S</string>
    <string name="elegir_lugar">Elegir Lugar</string>
    <string name="el_empleado_no_registra_ning_n_cliente">El empleado no registra ningún cliente</string>
    <string name="admin_clients">Administrá tus clientes</string>
    <string name="nueva_promocion">Nueva Promoción</string>
    <string name="employees">Empleados</string>
    <string name="this_week">Esta semana</string>
    <string name="pr_ximos_turnos">Próximos eventos</string>
    <string name="es_tiempo_de_descanso">Es tiempo de descanso</string>
    <string name="alguna_reserva_para_hacer">¿Alguna reserva para hacer?</string>
    <string name="un_nuevo_comienzo">Un nuevo comienzo</string>
    <string name="alg_na_solicitud_para_enviar">¿Alguna solicitud para enviar?</string>
    <string name="este_lugar_a_n_no_tiene_trabajos">Este lugar aún no tiene trabajos</string>
    <string name="beneficio_promociones">Creación y notificación de promociones</string>
    <string name="edit_day_schedule_warning">Si hay turnos que queden comprometidos con el nuevo esquema, serán cancelados</string>
    <string name="do_not_show_again">No mostrar de nuevo</string>
    <string name="descripci_n">Ingrese una descripción</string>
    <string name="save">guardar</string>
    <string name="administrar_lugares">Administrá tus lugares</string>
    <string name="registrar_lugar">Registrá tu lugar</string>
    <string name="obtener_premium">Obtené Premium</string>
    <string name="settings">Configuración</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="rechazar">Rechazar</string>
    <string name="accept">Aceptar</string>
    <string name="info_how_many_clients">¿A cuántos clientes les puedes brindar este servicio al mismo tiempo?</string>
    <string name="precio">Precio</string>
    <string name="info_duracion_del_servicio">Duración del servicio</string>
    <string name="ofrecido_en_los_dias">Ofrecido en los días</string>
    <string name="trabaj_s_en_este_lugar">¿Trabajás en este lugar?</string>
    <string name="qu_trabajos_se_realizan_all">¿Qué trabajos se realizan allí?</string>
    <string name="ingres_la_informaci_n_de_contacto">Ingrese la información de contacto</string>
    <string name="telefono">Teléfono</string>
    <string name="ahora_selecciona_en_el_mapa_la_ubicaci_n">Ahora seleccione en el mapa la ubicación</string>
    <string name="nombre">Nombre</string>
    <string name="slogan">Slogan</string>
    <string name="cancel">Cancelar</string>
    <string name="beneficio_registro_lugares_ilimitados">Registrar una cantidad ilimitada de lugares</string>
    <string name="beneficio_contact_info">Obtener información de contacto de los clientes</string>
    <string name="beneficio_mail_confirmando">Notificaciones automáticas via email confirmando turnos</string>
    <string name="beneficio_mail_cancelando">Notificaciones automáticas via email sobre cancelación de turnos</string>
    <string name="confirm_job_request">Confirmar Solicitud de Trabajo</string>
    <string name="send">Enviar</string>
    <string name="btn_edit_services">Editar servicios</string>
    <string name="req_select_at_least_one_day">Seleccione al menos un día en donde se brinda el servicio</string>
    <string name="req_select_duration">Seleccione la duración del servicio</string>
    <string name="req_complete_price_field">Este campo es obligatorio</string>
    <string name="label_other_service_concurrency">Seleccione los servicios con los cuales puede realizar este servicio en paralelo</string>
    <string name="scroll_down">siguiente</string>
    <string name="label_fixed_schedule">¿Este servicio se brinda en horarios fijos?</string>
    <string name="label_bounded_times">Si el servicio es brindado solo en una franja horaria, selecciónela debajo. (Se adecuará al horario de apertura y cierre diario)</string>
    <string name="req_select_price">Ingrese un precio</string>
    <string name="invalid_time">Horario inválido</string>
    <string name="label_start_time">Horario de comienzo</string>
    <string name="label_end_time">Horario de fin</string>
    <string name="new_anoanymus_appointment">Agendar un turno</string>
    <string name="write_promo_description">Nueva promoción</string>
    <string name="send_to_all_clients">Enviar a todos los clientes</string>
    <string name="new_anonymous_app_title">Reservar un turno</string>
    <string name="choose_apps_services">Elegí los servicios del turno</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="email">Email</string>
    <string name="informacion_del_cliente">Información del cliente</string>
    <string name="error_de_conexion">Error de conexión</string>
    <string name="enviar_un_mensaje">Enviar un mensaje</string>
    <string name="buscar_turnos_disponibles">Buscar turnos disponibles</string>
    <string name="no_se_encontraron_turnos_disponibles_para_el_d_a_seleccionado">No se encontraron turnos disponibles para el día seleccionado</string>
    <string name="seleccion_la_fecha">Seleccioná la fecha</string>
    <string name="ingrese_telefono_valido">Ingrese un teléfono válido. Sin anteponer el 15 y con código de área sin 0</string>
    <string name="search_for_service">Buscar servicio</string>
    <string name="label_is_class">¿Este servicio se brinda en formato de clase?</string>
    <string name="select_valid_class_time">Horario inválido, deberá distanciarse de los demás horarios al menos por la duración seleccionada</string>
    <string name="already_selected_class_time">Horario de clase ya seleccionado</string>
    <string name="need_to_add_class_time">Nececitas añadir por lo menos una clase</string>
    <string name="req_first_select_duration">Por favor, primero seleccione la duración del servicio</string>
    <string name="people_count_plural">personas</string>
    <string name="free_slot">Lugar disponible</string>
    <string name="people_count_singular">persona</string>
    <string name="select_access_options">Selecciona las opciones de acceso que deseas permitir al empleado</string>
    <string name="warning_save_changes">Advertencia al confirmar cambios</string>
    <string name="confirm_cancel_app">¿Confirma la cancelación del turno?</string>
    <string name="discard">descartar</string>
    <string name="save_before_exiting">¿Guardar cambios antes de regresar?</string>
    <string name="remove">Eliminar</string>
    <string name="clients">Clientes</string>
    <string name="req_select_at_least_one_class_time">Seleccione al menos un horario de clase</string>
    <string name="label_select_class_times">Seleccioná los horarios de las clases</string>
    <string name="open_google_play">Abrir Google Play</string>
    <string name="obligatory_field">Este campo es obligatorio</string>
    <string name="subscriptions_for_places">Suscripciones para tus lugares</string>
    <string name="subscriptions_for_jobs">Suscripciones para tus trabajos</string>
    <string name="sub_token_validation_error">Lo sentimos hubo un error al procesar su intento de compra</string>
    <string name="warning_to_use_same_email">Antes de realizar el pago, porfavor recuerda utilizar una cuenta de Mercado Pago asociada con el email </string>
    <string name="understood">entendido</string>
    <string name="account">Cuenta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_subscriptions">Mis suscripciones</string>
    <string name="confirm_unsub_title">¿Confirma que desea anular su suscripción en %1$s?</string>
    <string name="unsubscribe">anular suscripción</string>
    <string name="no_subscriptions">Aún no has realizado una suscripción</string>
    <string name="allow_user_cancellable_apps">Permitir a los usuarios cancelar sus turnos</string>
    <string name="appointment_interval">Seleccione el intervalo entre turnos</string>
    <string name="select_app_interval">Seleccione el intervalo entre los turnos</string>
    <string name="about">Información</string>
    <string name="privacy_policy">Política de Privacidad</string>
    <string name="terms_cond">Términos y Condiciones</string>
    <string name="notify_user_checkbox">¿Desea notificar al cliente?</string>
    <string name="purchases">Mis Compras</string>
    <string name="suscriptions">Suscripciones</string>
    <string name="help">Ayuda</string>
    <string name="add_observation">Añadir una observación</string>
    <string name="edit_observation">Editar observación</string>
    <string name="suggestions">Sugerencias</string>
    <string name="payments">Mis Cobros</string>
    <string name="credits">Créditos</string>
    <string name="discount_credits">¿Desdea descontar créditos?</string>
    <string name="no_sus_templates_found">No encontramos suscripciones disponibles o tienes el período de prueba activo</string>
    <string name="Lunes">Lun</string>
    <string name="Martes">Mar</string>
    <string name="Miercoles">Mié</string>
    <string name="Jueves">Jue</string>
    <string name="Viernes">Vie</string>
    <string name="Sabado">Sáb</string>
    <string name="DOmingo">Dom</string>
</resources>