<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:icon="@drawable/ic_store_black_24dp"
            android:id="@+id/nav_admin_places"
            android:title="@string/administrar_lugares" />

    <item
            android:icon="@drawable/ic_cases_black_24dp"
            android:id="@+id/nav_job_request"
            android:title="@string/solicitudes_de_trabajo" />

    <item
            android:icon="@drawable/ic_add_business_black_24dp"
            android:id="@+id/nav_new_place"
            android:title="@string/registrar_lugar" />

    <group
            android:id="@+id/group1">
        <item
                android:icon="@drawable/ic_outline_verified_24"
                android:id="@+id/nav_get_premium"
                android:title="@string/suscriptions" />

        <item
                android:icon="@drawable/ic_outline_shopping_cart_24"
                android:id="@+id/nav_view_purchases"
                android:title="@string/purchases" />

        <item
                android:icon="@drawable/ic_baseline_attach_money_24"
                android:id="@+id/nav_view_payments"
                android:title="@string/payments" />
    </group>

    <group
            android:id="@+id/group2">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings" />

        <item
                android:id="@+id/about"
                android:icon="@drawable/ic_outline_info_24"
                android:title="@string/about" />

        <item
                android:id="@+id/help"
                android:icon="@drawable/ic_baseline_help_outline_24"
                android:title="@string/help" />

        <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/log_out" />

    </group>
</menu>