<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="-4dp"
        android:id="@+id/cardViewContainer"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:id="@+id/containerMonth"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="8dp">

        <LinearLayout
                android:id="@+id/containerMonthPicker"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:weightSum="7">

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/dom" />

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/lun" />

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/mar" />

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/mie" />

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/jue" />

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/vie" />

            <TextView
                    style="@style/day_indicator"
                    android:text="@string/sab" />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/weekRowContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
