<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lunes"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Martes"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="@+id/checkBox2" />


    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />

    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Miercoles"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox2" />


    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jueves"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox3" />


    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Viernes"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintEnd_toEndOf="@+id/checkBox5"
        app:layout_constraintStart_toStartOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox4" />


    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sabado"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="@+id/checkBox6"
        app:layout_constraintStart_toStartOf="@+id/checkBox6" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox5" />

    <TextView
        style="@style/Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOmingo"
        android:textColor="@color/grey_ui"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox7"
        app:layout_constraintEnd_toEndOf="@+id/checkBox7"
        app:layout_constraintStart_toStartOf="@+id/checkBox7" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBox6" />
</androidx.constraintlayout.widget.ConstraintLayout>