<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/edit_observation"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:id="@+id/appCompatTextView" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:hint="@string/add_observation">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/labelObservation"
                android:minHeight="75dp"
                android:maxHeight="120dp"
                android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/suggestions"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tilPrice"
            android:layout_height="wrap_content"
            android:id="@+id/appCompatTextView2"
            tools:layout_editor_absoluteX="16dp" />

    <ListView
            android:id="@+id/listViewSuggestions"
            android:layout_width="match_parent"
            android:divider="@null"
            android:layout_marginTop="8dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
            tools:layout_editor_absoluteX="16dp" />

    <com.yatenesturno.custom_views.LoadingButton
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/listViewSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btnConfirm"
            app:buttonText="@string/confirm"
            android:layout_height="wrap_content" />

    <com.yatenesturno.custom_views.LoadingButton
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/listViewSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/btnDelete"
            app:buttonBackground="@color/darker_grey"
            app:buttonText="@string/remove"
            android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>