<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_work_outline_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="asdasddas"
        android:textColor="@color/darker_grey" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="asdasddas"
        android:textColor="@color/darker_grey" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCreditsCount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/credits"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCreditsCount"
            android:layout_width="match_parent"
            android:maxLength="3"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.yatenesturno.custom_views.LoadingButton
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:buttonBackground="@color/darker_grey"
            app:buttonText="@string/remove" />

        <com.yatenesturno.custom_views.LoadingButton
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:buttonText="@string/confirm" />

    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>