<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:drawableTint="@color/darker_grey"
        android:gravity="center_vertical"
        android:text="Client"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="11/10/2021"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_access_time_24_grey"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="17:00"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_baseline_work_outline_24"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="Clase Calistenia"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/checkBoxNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/notify_user_checkbox" />

    <CheckBox
        android:id="@+id/checkBoxCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawableEnd="@drawable/ic_credits"
        android:drawablePadding="4dp"
        android:text="@string/discount_credits" />

    <com.yatenesturno.custom_views.LoadingButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        app:buttonText="@string/confirm" />

</androidx.appcompat.widget.LinearLayoutCompat>